@@ -1,3 +1,9 @@
+2002-03-19  Richard Williamson  <rjw@apple.com>
+
+        Fixed IFWebView leak.
+        
+	* WebView.subproj/IFWebView.mm: (-[IFWebView provisionalDataSourceChanged:]):
+
 2002-03-18  John Sullivan  <sullivan@apple.com>
 
 	Imposed age limit on history items saved to/loaded from disk.
